Fix field label layout overflow
NGW-2132

--- a/nextgisweb_formbuilder/nodepkg/editor-widget/FormbuilderEditorWidget.less
+++ b/nextgisweb_formbuilder/nodepkg/editor-widget/FormbuilderEditorWidget.less
@@ -127,8 +127,8 @@
   > .fields-and-properties {
     display: flex;
     flex-direction: column;
-    min-width: 250px;
-    max-width: 400px;
+    min-width: 350px;
+    max-width: 350px;
   }
 
   > .grabbed-input {
